src/test/compile-fail/region-unused.rs
type foo/& = {f: int}; //! ERROR lifetime `self` unused

fn main() {}